# voice-ai-03

./: README.md  SLICE-0-SETUP.md  SLICE-1-SETUP.md  SLICE-2A-SETUP.md  SLICE-2B-SETUP.md  SLICE-3-SETUP.md  SLICE-4-SETUP.md  SLICE-5-SETUP.md  car-dealership-voice-ai-architecture.html  nixpacks.toml  package.json  railway.toml  sequence-diagrams.html
agent-api/: Dockerfile  README.md  requirements.txt
agent-api/app/: agent.py  config.py  db.py  embeddings.py  intent.py  main.py  rag.py  redis_client.py  sql_agent.py  synthesis.py  unified_turn.py
dashboard/: Dockerfile  package.json  tailwind.config.js
dashboard/app/: globals.css  layout.js  page.js
dashboard/app/history/: page.js
dashboard/lib/: api.js  socket.js
echokit-server/: README.md  package.json
echokit-server/src/: agent-client.js  config.js  health.js  logger.js  server.js  stt.js  supervisor.js  tts.js  vonage-signature.js  webhooks.js  websocket.js
echokit-server/test/: echo-client.js
migrations/: 001_init.sql  002_pgvector.sql  003_indexes.sql  004_seed.sql
scripts/: seed_embeddings.py  seed_embeddings_simple.py
shared/: README.md
shared/contracts/: agent-turn.schema.json  session.schema.json  vehicle.schema.json  webhook-events.schema.json  ws-events.schema.json
shared/python/: pyproject.toml
shared/python/src/voiceai_contracts/: __init__.py  agent_turn.py  events.py  session.py  vehicle.py
shared/scripts/: verify-contracts.mjs
shared/typescript/: package.json  tsconfig.json
shared/typescript/src/: agent-turn.ts  events.ts  index.ts  session.ts  vehicle.ts
